--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
    "rewrites": [
-     { "source": "/api/v1/(.*)", "destination": "/api/v1/$1" },
+     { "source": "/api/(.*)", "destination": "/api/$1" },
      { "source": "/(.*)", "destination": "/$1" }
    ],
    "headers": [
