--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,22 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "./index.js",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
+    { "handle": "filesystem" },
+    {
+      "src": "/api/(.*)",
+      "dest": "/routes/api.js"
+    },
+    {
+      "src": "/users/(.*)",
+      "dest": "/routes/users.js"
+    },
+    {
+      "src": "/admin/(.*)",
+      "dest": "/routes/admin.js"
+    },
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/routes/index.js"
     }
   ]
 }
