--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "routes": [
     { "handle": "filesystem" },
     {
-      "src": "/api/(.*)",
+      "src": "/api/v1/(.*)",
       "dest": "/routes/api.js"
     },
     {
