--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
