--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/api/(.*)", "dest": "/app.js" },
+    { "src": "/api/v1/(.*)", "dest": "/app.js" },
     { "src": "/admin/(.*)", "dest": "/app.js" },
     { "src": "/(.*)", "dest": "/app.js" }
   ]
