--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "app.js", "use": "@vercel/node" }
+  ],
   "routes": [
     { "src": "/api/v1/(.*)", "dest": "/app.js" },
     { "src": "/admin/(.*)", "dest": "/app.js" },
